--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>text</title>
+	<title>Sistemes de representació avançats ---- 2DG</title>
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -69,6 +69,9 @@
 		}
 		ul li{
 			margin: 0 0 0 100px;
+		}
+		ul ul li::before{
+			content:"-> "
 		}
 	</style>
 </head>
