--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <ul>
 	<li>Juan Martínez García</li>
 	<ul>
-		<li><a href="#">poema</a></li>
+		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
 	<li>Omar Giménez García</li>
