--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <ul>
 	<li>Juan Martínez García</li>
 	<ul>
-		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
+		<li><a href="#">poema</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
 	<li>Omar Giménez García</li>
@@ -90,6 +90,9 @@
 	<li>Sergio Miró Bernabeu</li>
 	<li>Paqui Valero Jiménez</li>
 	<li>Clara Pérez Martínez</li>
+	<ul>
+		<li><a href="https://claraperezmartinez.github.io/Poema/"<poema</a></li>
+	</ul>
 	<li>Natalia Baldó García</li>
 	<li>India Gisbert Martín del Burgo</li>
 	<li>Clara García Marfil</li>
