--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
-	<li>Omar Giménez García</li>
+	<li>Omar Giménez i García</li>
 	<ul>
 		<li><a href="https://github.com/omarufo/Poema.git">poema</a></li>
 	</ul>
