--- a/index.html
+++ b/index.html
@@ -81,18 +81,21 @@
 <ul>
 	<li>Juan Martínez García</li>
 	<ul>
-		<li><a href="#">poema</a></li>
+		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
 	<li>Omar Giménez García</li>
+	<ul>
+		<li><a href="https://github.com/omarufo/Poema.git">poema</a></li>
+	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<li>Lucía Martínez López</li>
-	<ul>
-		<li><a href="https://luciaml10.github.io/poema/">poema<a/></li>
-	</ul>
 	<li>Sergio Miró Bernabeu</li>
 	<li>Paqui Valero Jiménez</li>
 	<li>Clara Pérez Martínez</li>
+	<ul>
+		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
+	</ul>
 	<li>Natalia Baldó García</li>
 	<li>India Gisbert Martín del Burgo</li>
 	<li>Clara García Marfil</li>
