--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
+	<url>
+		<li><a href="/a>https://ainamolines.github.io/poema/">poema</a></li>
+	</url>
 	<li>Omar Giménez García</li>
 	<ul>
 		<li><a href="https://github.com/omarufo/Poema.git">poema</a></li>
@@ -91,9 +94,6 @@
 	<li>Sofía Escolano Gómez</li>
 	<li>Lucía Martínez López</li>
 	<li>Sergio Miró Bernabeu</li>
-	<ul>
-		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
-	
 	<li>Paqui Valero Jiménez</li>
 	<li>Clara Pérez Martínez</li>
 	<ul>
