--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	</ul>
 	<li>Aina Molines Montaner</li>
 	<url>
-		<li><a href="/a>https://ainamolines.github.io/poema/">poema</a></li>
+		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
 	</url>
 	<li>Omar Giménez García</li>
 	<ul>
