--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	</ul>
 	<li>Aina Molines Montaner</li>
 	<url>
-		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
+		<li><a href="/a>https://ainamolines.github.io/poema/">poema</a></li>
 	</url>
 	<li>Omar Giménez García</li>
 	<ul>
@@ -93,11 +93,11 @@
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<li>Lucía Martínez López</li>
-	<ul>
-		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
-	</ul>
-	
 	<li>Sergio Miró Bernabeu</li>
+	<ul>
+		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
+		
+		
 	<li>Paqui Valero Jiménez</li>
 	<li>Clara Pérez Martínez</li>
 	<ul>
