--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@
 		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
-	<url>
-		<li><a href="/a>https://ainamolines.github.io/poema/">poema</a></li>
-	</url>
 	<li>Omar Giménez García</li>
 	<ul>
 		<li><a href="https://github.com/omarufo/Poema.git">poema</a></li>
@@ -96,14 +93,16 @@
 	<li>Sergio Miró Bernabeu</li>
 	<ul>
 		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
-		
-		
+	
 	<li>Paqui Valero Jiménez</li>
 	<li>Clara Pérez Martínez</li>
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
+	<ul>
+		<li><a href="https://nataliabaldogarcia.github.io/Be-Calm/">poema</a></li>
+	</ul>
 	<li>India Gisbert Martín del Burgo</li>
 	<li>Clara García Marfil</li>
 	<li>Pablo Morán Delgado</li>
