--- a/index.html
+++ b/index.html
@@ -84,26 +84,31 @@
 		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
+	<url>
+		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
+	</url>
 	<li>Omar Giménez García</li>
 	<ul>
 		<li><a href="https://github.com/omarufo/Poema.git">poema</a></li>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<li>Lucía Martínez López</li>
-	<li>Sergio Miró Bernabeu</li>
 	<ul>
-		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
+		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
+	</ul>
 	
+	<li>Sergio Miró Bernabeu</li>
 	<li>Paqui Valero Jiménez</li>
 	<li>Clara Pérez Martínez</li>
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
+	<li>India Gisbert Martín del Burgo
 	<ul>
-		<li><a href="https://nataliabaldogarcia.github.io/Be-Calm/">poema</a></li>
+		<li><a href="https://india7.github.io/aguascristalinas/poema"></a></li>
 	</ul>
-	<li>India Gisbert Martín del Burgo</li>
+	</li>
 	<li>Clara García Marfil</li>
 	<li>Pablo Morán Delgado</li>
 </ul>
