--- a/index.html
+++ b/index.html
@@ -81,28 +81,19 @@
 <ul>
 	<li>Juan Martínez García</li>
 	<ul>
-		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
+		<li><a href="#">poema</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
 	<li>Omar Giménez García</li>
-	<ul>
-		<li><a href="https://github.com/omarufo/XXXX.git">poema</a></li>
-	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<li>Lucía Martínez López</li>
 	<li>Sergio Miró Bernabeu</li>
-	<ul>
-		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
-	
 	<li>Paqui Valero Jiménez</li>
+	<ul>
+		<li><a href="#https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
+	</ul>
 	<li>Clara Pérez Martínez</li>
-	<ul>
-		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
-	</ul>
 	<li>Natalia Baldó García</li>
-	<ul>
-		<li><a href="https://nataliabaldogarcia.github.io/Be-Calm/">poema</a></li>
-	</ul>
 	<li>India Gisbert Martín del Burgo</li>
 	<li>Clara García Marfil</li>
 	<li>Pablo Morán Delgado</li>
