--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
 	</ul>
 	
 	<li>Paqui Valero Jiménez</li>
+	<ul>
+		<li><a href="https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
+	</ul>
+	
 	<li>Clara Pérez Martínez</li>
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
