--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	<li>Natalia Baldó García</li>
 	<li>India Gisbert Martín del Burgo
 	<ul>
-		<li><a href="https://india7.github.io/aguascristalinas/poema"></a></li>
+		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
 	</ul>
 	</li>
 	<li>Clara García Marfil</li>
