--- a/index.html
+++ b/index.html
@@ -81,23 +81,45 @@
 <ul>
 	<li>Juan Martínez García</li>
 	<ul>
-		<li><a href="#">poema</a></li>
+		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
+	<url>
+		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
+	</url>
 	<li>Omar Giménez García</li>
 	<ul>
-		<li><a href="https://github.com/omarufo/Poema/tree/master#poema">poema</a></li>
+		<li><a href="https://github.com/omarufo/Poema.git">poema</a></li>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
+	<ul>
+		<li><a href="https://github.com/Sofiaescolano/Ejercicio-Poema.git">poema</a></li>
+	</ul>
 	<li>Lucía Martínez López</li>
+	<ul>
+		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
+	</ul>
+	
 	<li>Sergio Miró Bernabeu</li>
+	<ul>
+		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
+	</ul>
+	
 	<li>Paqui Valero Jiménez</li>
 	<ul>
-		<li><a href="#https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
+		<li><a href="https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
 	</ul>
+	
 	<li>Clara Pérez Martínez</li>
+	<ul>
+		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
+	</ul>
 	<li>Natalia Baldó García</li>
-	<li>India Gisbert Martín del Burgo</li>
+	<li>India Gisbert Martín del Burgo
+	<ul>
+		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
+	</ul>
+	</li>
 	<li>Clara García Marfil</li>
 	<li>Pablo Morán Delgado</li>
 </ul>
