--- a/index.html
+++ b/index.html
@@ -115,11 +115,10 @@
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
-	<li>India Gisbert Martín del Burgo
+	<li>India Gisbert Martín del Burgo</li>
 	<ul>
 		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
 	</ul>
-	</li>
 	<li>Clara García Marfil</li>
 	<li>Pablo Morán Delgado</li>
 </ul>
