--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	</ul>
 	<li>Omar Giménez García</li>
 	<ul>
-		<li><a href="https://github.com/omarufo/Poema.git">poema</a></li>
+		<li><a href="https://omarufo.github.io/poema/">poema</a></li>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
