--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 	</ul>
 	<li>Omar Giménez García</li>
 	<ul>
-		<li><a href="https://omarufo.github.io/poema/">poema</a></li>
+		<li><a href="https://github.com/omarufo/Poema.git">poema</a></li>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
-		<li><a href="https://github.com/Sofiaescolano/Ejercicio-Poema.git">poema</a></li>
+		<li><a href="https://SofiaEscolano.github.io/Ejercicio-Poema/">poema</a></li>
 	</ul>
 	<li>Lucía Martínez López</li>
 	<ul>
