--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
-		<li><a href="https://SofiaEscolano.github.io/Ejercicio-Poema/">poema</a></li>
+		<li><a href="https://sofiaescolano.github.io/Ejercicio-Poema/">poema</a></li>
 	</ul>
 	<li>Lucía Martínez López</li>
 	<ul>
