--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
 	</ul>
 	<li>Clara García Marfil</li>
+	<ul>
+		<li><a href="https://claragarciam.github.io/poema/">poema</a></li>
+	</ul>
 	<li>Pablo Morán Delgado</li>
 </ul>
 </div>
