--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<ul>
 		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
 	</ul>
-	<li>Omar Giménez García</li>
+	<li>Omar Giménez i García</li>
 	<ul>
 		<li><a href="https://omarufo.github.io/Poema/">Poema</a></li>
 	</ul>
@@ -115,21 +115,12 @@
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
-	<ul>
-		<li><a href="https://nataliabaldogarcia.github.io/Be-Calm/">poema</a></li>
-	</ul>
 	<li>India Gisbert Martín del Burgo</li>
 	<ul>
 		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
 	</ul>
 	<li>Clara García Marfil</li>
-	<ul>
-		<li><a href="https://claragarciam.github.io/poema/">poema</a></li>
-	</ul>
 	<li>Pablo Morán Delgado</li>
-	<ul>
-		<li><a href=" https://pablomdmd1999.github.io/poema/">poema</a></li>
-	</ul>	
 </ul>
 </div>
 </body>
