--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
 	</ul>
 	<li>Clara García Marfil</li>
 	<li>Pablo Morán Delgado</li>
+	<li>Cristina Navalon Beltran</li>
+	<ul> <a href="https://CristinaNB.github.io/ejercicio_poema/">poema</a></li> 
 </ul>
 </div>
 </body>
