--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
 	<li>Clara García Marfil</li>
 	<li>Pablo Morán Delgado</li>
 	<li>Cristina Navalon Beltran</li>
-	<ul> <a href="https://CristinaNB.github.io/ejercicio_poema/">poema</a></li> 
+	<ul> 
+		<li><a href="https://CristinaNB.github.io/ejercicio_poema/">poema</a></li>
+	</ul>
 </ul>
 </div>
 </body>
