--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	<li>Pablo Morán Delgado</li>
 	<li>Cristina Navalon Beltran</li>
 	<ul> 
-		<li><a href="https://CristinaNB.github.io/ejercicio_poema/">poema</a></li>
+		<li><a href="https://cristinanb.github.io/ejercicio_poema/">poema</a></li>
 	</ul>
 </ul>
 </div>
