--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
 	<ul>
 		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
 	</ul>
+	<li>Judit Iniesta Lorente</li>
+	<ul>
+		<li><a href="https://rompetechxs.github.io/Judit.github.io"/>poema</a></li>
+	</ul>
 	<li>Clara García Marfil</li>
 	<li>Pablo Morán Delgado</li>
 	<li>Cristina Navalon Beltran</li>
