--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
 		<li><a href="https://rompetechxs.github.io/Judit.github.io"/>poema</a></li>
 	</ul>
 	<li>Clara García Marfil</li>
+	<ul> 
+		<li><a href="https://claragarciam.github.io/poema/">poema</a></li>
+	</ul>
 	<li>Pablo Morán Delgado</li>
 	<li>Cristina Navalon Beltran</li>
 	<ul> 
