--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 	<ul>
 		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
 	</ul>
-	
+	<li>Rebeca Jordá Pintado</li>
+	<ul>
+		<li><a href="https://rebecajord.github.io/poema-jueves/">poema</a></li>
+	</ul>
 	<li>Sergio Miró Bernabeu</li>
 	<ul>
 		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
