--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	</ul>
 	<li>Judit Iniesta Lorente</li>
 	<ul>
-		<li><a href="https://rompetechxs.github.io/poema/.">poema</a></li>
+		<li><a href="https://rompetechxs.github.io/poema/">poema</a></li>
 	</ul>
 	<li>Clara García Marfil</li>
 	<ul> 
