--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 	<li>Aina Molines Montaner</li>
 	<ul>
 		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg ">poema</a></li>
 	</ul>
 	<li>Omar Giménez i García</li>
 	<ul>
