--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <ul>
 	<li>Magda Arques</li>
 	<ul>
-		<li><a href="#">Merz 1 Holland Dada, Theo Van Doesburg, p17</li>
+		<li><a href="#">Merz 1 Holland Dada, Theo Van Doesburg, p17</a></li>
 	</ul>
 	<li>Juan Martínez García</li>
 	<ul>
