--- a/index.html
+++ b/index.html
@@ -79,19 +79,15 @@
 <div id="container">
 <h1 id="un">Sistemes de Representació Avançada 18/19</h1>
 <ul>
-	<li>Magda Arques</li>
-	<ul>
-		<li><a href="#">Merz 1 Holland Dada, Theo Van Doesburg, p17</a></li>
-	</ul>
 	<li>Juan Martínez García</li>
 	<ul>
 		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
+		<li><a href="#">títol, creador</li>
 	</ul>
 	<li>Aina Molines Montaner</li>
 	<ul>
 		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
-		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg">Inside back cover of Blok 6-7, Warsaw, 1924</a></li>
-		
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg ">poema</a></li>
 	</ul>
 	<li>Omar Giménez i García</li>
 	<ul>
@@ -122,6 +118,7 @@
 	<li>Clara Pérez Martínez</li>
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
+		<li><a href="https://monoskop.org/Irradiador#mediaviewer/File:Irradiador_1.jpg>Irradiador 1(September 1923). Fermín Revueltas</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
 	<ul> 
