--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<li>Aina Molines Montaner</li>
 	<ul>
 		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
-		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg ">Inside back cover of Blok 6-7, Warsaw, 1924</a></li>
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg ">poema</a></li>
 	</ul>
 	<li>Omar Giménez i García</li>
 	<ul>
@@ -100,6 +100,7 @@
 	<li>Lucía Martínez López</li>
 	<ul>
 		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
+		<li><a href="Die Form: Zeitschrift für gestaltende Arbeit P1"></a></li>
 	</ul>
 	<li>Rebeca Jordá Pintado</li>
 	<ul>
@@ -118,7 +119,6 @@
 	<li>Clara Pérez Martínez</li>
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
-		<li><a href="https://monoskop.org/Irradiador#mediaviewer/File:Irradiador_1.jpg>Irradiador 1(September 1923). Fermín Revueltas</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
 	<ul> 
