--- a/index.html
+++ b/index.html
@@ -79,15 +79,19 @@
 <div id="container">
 <h1 id="un">Sistemes de Representació Avançada 18/19</h1>
 <ul>
+	<li>Magda Arques</li>
+	<ul>
+		<li><a href="#">Merz 1 Holland Dada, Theo Van Doesburg, p17</a></li>
+	</ul>
 	<li>Juan Martínez García</li>
 	<ul>
 		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
-		<li><a href="#">títol, creador</li>
 	</ul>
 	<li>Aina Molines Montaner</li>
 	<ul>
 		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
-		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg ">poema</a></li>
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg">Inside back cover of Blok 6-7, Warsaw, 1924</a></li>
+		
 	</ul>
 	<li>Omar Giménez i García</li>
 	<ul>
@@ -95,12 +99,12 @@
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
+		<li><a href="https://monoskop.org/Avant-garde_and_modernist_magazines#mediaviewer/File:Blok_6-7_1924.jpg">Blok</a></li>
 		<li><a href="https://sofiaescolano.github.io/Ejercicio-Poema/">poema</a></li>
 	</ul>
 	<li>Lucía Martínez López</li>
 	<ul>
 		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
-		<li><a href="Die Form: Zeitschrift für gestaltende Arbeit P1"></a></li>
 	</ul>
 	<li>Rebeca Jordá Pintado</li>
 	<ul>
