--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 	<li>Lucía Martínez López</li>
 	<ul>
 		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
+		<li><a href="Die Form: Zeitschrift für gestaltende Arbeit 4:10 p1"></a></li>
 	</ul>
 	<li>Rebeca Jordá Pintado</li>
 	<ul>
