--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
 	<li>Lucía Martínez López</li>
 	<ul>
 		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
-		<li><a href="Die Form: Zeitschrift für gestaltende Arbeit 4:10 p1"></a></li>
 	</ul>
 	<li>Rebeca Jordá Pintado</li>
 	<ul>
@@ -145,6 +144,8 @@
 	<li>Cristina Navalon Beltran</li>
 	<ul> 
 		<li><a href="https://cristinanb.github.io/ejercicio_poema/">poema</a></li>
+		<li><a href="https://monoskop.org/Axis#mediaviewer/File:Axis_3_Jul_1935.jpg">AXIS 3 JUL 1935</a></li>
+		
 	</ul>
 	
 	<li>Carla Abad Pérez</li>
