--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 	<li>Sergio Miró Bernabeu</li>
 	<ul>
 		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
+		< Li > < un  href = https://monoskop.org/images/8/8a/Les_Reverberes_2_Jun_1938.pdf" > Les_Reverberes_2_portada </ una > </ li >
 	</ul>
 	
 	<li>Paqui Valero Jiménez</li>
