--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 	<li>Clara Pérez Martínez</li>
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
+		<li><a href="https://monoskop.org/Irradiador#mediaviewer/File:Irradiador_1.jpg">Irradiador 1 (September 1923).</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
 	<ul> 
