--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 	<li>Carla Abad Pérez</li>
 	<ul>
 		<li><a href="https://carlabad.github.io/Ejercicio-poema-cancion/">poema</a></li>
+		<li><a href="https://monoskop.org/Avant-garde_and_modernist_magazines#mediaviewer/File:Die_Form_4_10_15_May_1929.jpg</a>DIE FORM</li>
 	</ul>
 </ul>
 </div>
