--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 	<li>Carla Abad Pérez</li>
 	<ul>
 		<li><a href="https://carlabad.github.io/Ejercicio-poema-cancion/">poema</a></li>
-		<li><a href="https://monoskop.org/Avant-garde_and_modernist_magazines#mediaviewer/File:Die_Form_4_10_15_May_1929.jpg</a></li> Portada
+		<li><a href="https://monoskop.org/Die_Form#mediaviewer/File:Die_Form_5-11_12_1930_cover.jpg">Die Form portada</a></li>
 	</ul>
 </ul>
 </div>
