--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 	<ul>
 		<li><a href="https://carlabad.github.io/Ejercicio-poema-cancion/">poema</a></li>
 		<li><a href="https://monoskop.org/Die_Form#mediaviewer/File:Die_Form_5-11_12_1930_cover.jpg">Die Form portada</a></li>
+		<li><a href="https://cristinanb.github.io/avantgarde/">avantgarde</a></li>
 	</ul>
 </ul>
 </div>
