--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
 		<li><a href="https://monoskop.org/Irradiador#mediaviewer/File:Irradiador_1.jpg">Irradiador 1</a></li>
+		<li><a href="https://claraperezmartinez.github.io/avantgarde/">avantgarde</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
 	<ul> 
