--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			font-family: "Typewriter",monospace;
 			font-size: 24px;
 			background-image: 
-			url('images/quatre.png'),
+			url('images/dos.png'),
 			url('images/un.png'),
-			url('images/dos.png');
+			url('images/quatre.png');
 			background-position: 0 200px, 300px 400px, 800px 900px;
 			background-repeat: no-repeat;
 		}
