--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<li>Aina Molines Montaner</li>
 	<ul>
 		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
-		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg">Inside back cover of Blok 6-7, Warsaw,1924</a></li>
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg"," https://ainamolines.github.io/Warsaw/">Inside back cover of Blok 6-7, Warsaw,1924</a></li>
 		
 	</ul>
 	<li>Omar Giménez i García</li>
