--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
 	<li>Omar Giménez i García</li>
 	<ul>
 		<li><a href="https://omarufo.github.io/Poema/">Poema</a></li>
-		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:MA_8_1_15_Oct_1922_back_cover.jpg">MA 8:1 (back cover), Vienna, 15 octubre 1922</a></li>
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:MA_8_1_15_Oct_1922_back_cover.jpg">MA 8:1 (back cover), Vienna, 15 octubre 1922</a>
+			<a href="https://omarufo.github.io/MA-8.1/">Revisió</a>
+		</li>
+		https://omarufo.github.io/MA-8.1/
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
@@ -161,7 +164,7 @@
 	<ul>
 		<li><a href="https://carlabad.github.io/Ejercicio-poema-cancion/">poema</a></li>
 		<li><a href="https://monoskop.org/Die_Form#mediaviewer/File:Die_Form_5-11_12_1930_cover.jpg">Die Form portada</a></li>
- 
+
 	</ul>
 </ul>
 </div>
