--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	<li>Cristina Navalon Beltran</li>
 	<ul> 
 		<li><a href="https://cristinanb.github.io/ejercicio_poema/">poema</a></li>
-		<li><a href="https://cristinanb.github.io/avantgarde/">avantgarde</a></li>
+		<li><a href="https://github.com/CristinaNB/avantgarde.git/">avantgarde</a></li>
 	
 	</ul>
 	
