--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 	<li>Carla Abad Pérez</li>
 	<ul>
 		<li><a href="https://carlabad.github.io/Ejercicio-poema-cancion/">poema</a></li>
-		<li><a href="https://monoskop.org/Die_Form#mediaviewer/File:Die_Form_5-11_12_1930_cover.jpg">Die Form portada</a></li>
+		<li><a href="https://github.com/CristinaNB/avantgarde.git/">Die Form portada</a></li>
 
 	</ul>
 </ul>
