--- a/index.html
+++ b/index.html
@@ -97,10 +97,8 @@
 	<li>Omar Giménez i García</li>
 	<ul>
 		<li><a href="https://omarufo.github.io/Poema/">Poema</a></li>
-		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:MA_8_1_15_Oct_1922_back_cover.jpg">MA 8:1 (back cover), Vienna, 15 octubre 1922</a></li>
-		<li><a href="https://omarufo.github.io/MA-8.1/">Revisió</a>
-		</li>
-		https://omarufo.github.io/MA-8.1/
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:MA_8_1_15_Oct_1922_back_cover.jpg">MA 8:1 (back cover), Vienna, 15 octubre 1922</a>
+		<a href="https://omarufo.github.io/MA-8.1/">Revisió</a></li>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
