--- a/index.html
+++ b/index.html
@@ -97,10 +97,8 @@
 	<li>Omar Giménez i García</li>
 	<ul>
 		<li><a href="https://omarufo.github.io/Poema/">Poema</a></li>
-		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:MA_8_1_15_Oct_1922_back_cover.jpg">MA 8:1 (back cover), Vienna, 15 octubre 1922</a></li>
-		<li><a href="https://omarufo.github.io/MA-8.1/">Revisió</a>
-		</li>
-		https://omarufo.github.io/MA-8.1/
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:MA_8_1_15_Oct_1922_back_cover.jpg">MA 8:1 (back cover), Vienna, 15 octubre 1922</a>
+		<a href="https://omarufo.github.io/MA-8.1/">Revisió</a></li>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
@@ -125,14 +123,13 @@
 	
 	<li>Paqui Valero Jiménez</li>
 	<ul>
+		<li><a href="https://monoskop.org/images/8/8a/Les_Reverberes_2_Jun_1938.pdf">Les_Reverberes_2_p4</a></li>
 		<li><a href="https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
-		<li><a href="https://github.com/paquivj/avantgarde.git/">avantgarde</a></li>
 	</ul>
 	
 	<li>Clara Pérez Martínez</li>
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
-		<li><a href="https://monoskop.org/Irradiador#mediaviewer/File:Irradiador_1.jpg">Irradiador 1</a></li>
 		<li><a href="https://claraperezmartinez.github.io/avantgarde/">avantgarde</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
