--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
-		<li><a href="https://monoskop.org/Avant-garde_and_modernist_magazines#mediaviewer/File:Blok_6-7_1924.jpg">Blok</a></li>
+		<li><a href="https://sofiaescolano.github.io/Avantgarde/">Blok</a></li>
 		<li><a href="https://sofiaescolano.github.io/Ejercicio-Poema/">poema</a></li>
 	</ul>
 	<li>Lucía Martínez López</li>
@@ -130,6 +130,7 @@
 	<li>Clara Pérez Martínez</li>
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
+		<li><a href="https://monoskop.org/Irradiador#mediaviewer/File:Irradiador_1.jpg">Irradiador 1</a></li>
 		<li><a href="https://claraperezmartinez.github.io/avantgarde/">avantgarde</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
@@ -153,7 +154,7 @@
 	<li>Cristina Navalon Beltran</li>
 	<ul> 
 		<li><a href="https://cristinanb.github.io/ejercicio_poema/">poema</a></li>
-		<li><a href="https://github.com/CristinaNB/avantgarde.git/">avantgarde</a></li>
+		<li><a href="https://cristinanb.github.io/avantgarde/">avantgarde</a></li>
 	
 	</ul>
 	
