--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			font-family: "Typewriter",monospace;
 			font-size: 24px;
 			background-image: 
+			url('images/quatredos.png'),
 			url('images/dos.png'),
-			url('images/un.png'),
-			url('images/quatre.png');
+			url('images/un.png');
 			background-position: 0 200px, 300px 400px, 800px 900px;
 			background-repeat: no-repeat;
 		}
@@ -97,14 +97,12 @@
 	<li>Omar Giménez i García</li>
 	<ul>
 		<li><a href="https://omarufo.github.io/Poema/">Poema</a></li>
-		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:MA_8_1_15_Oct_1922_back_cover.jpg">MA 8:1 (back cover), Vienna, 15 octubre 1922</a></li>
-		<li><a href="https://omarufo.github.io/MA-8.1/">Revisió</a>
-		</li>
-		https://omarufo.github.io/MA-8.1/
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:MA_8_1_15_Oct_1922_back_cover.jpg">MA 8:1 (back cover), Vienna, 15 octubre 1922</a>
+		<a href="https://omarufo.github.io/MA-8.1/">Revisió</a></li>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
-		<li><a href="https://monoskop.org/Avant-garde_and_modernist_magazines#mediaviewer/File:Blok_6-7_1924.jpg">Blok</a></li>
+		<li><a href="https://sofiaescolano.github.io/Avantgarde/">Blok</a></li>
 		<li><a href="https://sofiaescolano.github.io/Ejercicio-Poema/">poema</a></li>
 	</ul>
 	<li>Lucía Martínez López</li>
@@ -125,14 +123,13 @@
 	
 	<li>Paqui Valero Jiménez</li>
 	<ul>
+		<li><a href="https://monoskop.org/images/8/8a/Les_Reverberes_2_Jun_1938.pdf">Les_Reverberes_2_p4</a></li>
 		<li><a href="https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
-		<li><a href=" https://paquivj.github.io/avantgarde/.">avantgarde</a></li>
 	</ul>
 	
 	<li>Clara Pérez Martínez</li>
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
-		<li><a href="https://monoskop.org/Irradiador#mediaviewer/File:Irradiador_1.jpg">Irradiador 1</a></li>
 		<li><a href="https://claraperezmartinez.github.io/avantgarde/">avantgarde</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
@@ -156,7 +153,7 @@
 	<li>Cristina Navalon Beltran</li>
 	<ul> 
 		<li><a href="https://cristinanb.github.io/ejercicio_poema/">poema</a></li>
-		<li><a href="https://github.com/CristinaNB/avantgarde.git/">avantgarde</a></li>
+		<li><a href="https://cristinanb.github.io/avantgarde/"> avantgarde</a></li>
 	
 	</ul>
 	
