--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			font-family: "Typewriter",monospace;
 			font-size: 24px;
 			background-image: 
-			url('images/quatredos.png'),
+			url('images/quatre.png'),
 			url('images/dos.png'),
 			url('images/un.png');
 			background-position: 0 200px, 300px 400px, 800px 900px;
