--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	
 	<li>Paqui Valero Jiménez</li>
 	<ul>
-		<li><a href="https://paquivj.github.io/avantgarde/"></a></li>
+		<li><a href="https://paquivj.github.io/avantgarde/">avantgarde</a></li>
 		<li><a href="https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
 	</ul>
 	
