--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 	<li>Carla Abad Pérez</li>
 	<ul>
 		<li><a href="https://carlabad.github.io/Ejercicio-poema-cancion/">poema</a></li>
-		<li><a href="https://github.com/CristinaNB/avantgarde.git/">Die Form portada</a></li>
+		<li><a href=">Die Form portada</a></li>
 
 	</ul>
 </ul>
