--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
 	<li>Omar Giménez i García</li>
 	<ul>
 		<li><a href="https://omarufo.github.io/Poema/">Poema</a></li>
-		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:MA_8_1_15_Oct_1922_back_cover.jpg">MA 8:1 (back cover), Vienna, 15 octubre 1922</a>
-		<a href="https://omarufo.github.io/MA-8.1/">Revisió</a></li>
+		<li><a href="https://omarufo.github.io/MA-8.1/">MA 8:1, Vienna, 15 octubre 1922</a>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
@@ -123,8 +122,8 @@
 	
 	<li>Paqui Valero Jiménez</li>
 	<ul>
+		<li><a href="https://paquivj.github.io/avantgarde/">avantgarde</a></li>
 		<li><a href="https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
-		<li><a href="https://paquivj.github.io/avantgarde/"> avantgarde</a></li>
 	</ul>
 	
 	<li>Clara Pérez Martínez</li>
@@ -160,7 +159,7 @@
 	<li>Carla Abad Pérez</li>
 	<ul>
 		<li><a href="https://carlabad.github.io/Ejercicio-poema-cancion/">poema</a></li>
-		<li><a href="https://github.com/CristinaNB/avantgarde.git/">Die Form portada</a></li>
+		<li><a href=">Die Form portada</a></li>
 
 	</ul>
 </ul>
