--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	<li>Lucía Martínez López</li>
 	<ul>
 		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
-		<li><a href="https://monoskop.org/Avant-garde_and_modernist_magazines#mediaviewer/File:Die_Form_4_10_15_May_1929.jpg">Die Form: Zeitschrift für gestaltende Arbeit 4:10 p1</a></li>
+		<li><a href="https://luciaml10.github.io/Avant-Garde-p10/">avantgarde</a></li>
 	</ul>
 	<li>Rebeca Jordá Pintado</li>
 	<ul>
