--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	<ul>
 		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
 		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Blok_6-7_1924_inside_back_cover.jpg">Inside back cover of Blok 6-7, Warsaw,1924</a></li>
-		<li><a href="https://ainamolines.github.io/avantgarde/"></a>Warsaw</li>
+		<li><a href="https://ainamolines.github.io/avantgarde/">Warsaw</a></li>
 		
 		
 	</ul>
