--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	<li>Sergio Miró Bernabeu</li>
 	<ul>
 		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
-		<li><a href="https://monoskop.org/images/8/8a/Les_Reverberes_2_Jun_1938.pdf">Les_Reverberes_2_portada</a></li>
+		<li><a href="https://sergiomirobernabeu.github.io/Avant_Garde_p10/">Les_Reverberes_2_portada</a></li>
 	</ul>
 	
 	<li>Paqui Valero Jiménez</li>
