--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 	<li>Judit Iniesta Lorente</li>
 	<ul>
 		<li><a href="https://rompetechxs.github.io/poema/">poema</a></li>
-		<li><a href="https://rompetechxs.github.io/avantgarde/">DOKUMENTUM</a></li>
+		<li><a href="https://rompetechxs.github.io/avantgarde/">dokumentum</a></li>
 		
 	</ul>
 	<li>Clara García Marfil</li>
