--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	</ul>
 	<li>Rebeca Jordá Pintado</li>
 	<ul>
-                <li><a href="https://monoskop.org/Die_Form#mediaviewer/File:Die_Form_5-11_12_1930_cover.jpg">Die Form 5</a></li>
+                <li><a href="https://rebecajord.github.io/die-form-num-5/"</a></li>
 		<li><a href="https://rebecajord.github.io/poema-jueves/">poema</a></li>
 	</ul>
 	<li>Sergio Miró Bernabeu</li>
