--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	<li>Rebeca Jordá Pintado</li>
 	<ul>
 		<li><a href="https://rebecajord.github.io/poema-jueves/">poema</a></li>
-		<li><a href="https://rebecajord.github.io/die-form-num-5/"vanguardias</a></li>
+		<li><a href="https://rebecajord.github.io/die-form-num-5/"vanguardias</a>
 	</ul>
 	<li>Sergio Miró Bernabeu</li>
 	<ul>
