--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 	<li>Juan Martínez García</li>
 	<ul>
 		<li><a href="https://juanmgandia.github.io/POEMA/">poema</a></li>
+		<li><a href="https://juanmgandia.github.io/IRRADIADOR/">Irradiador</a></li>
 	</ul>
 	<li>Aina Molines Montaner</li>
 	<ul>
