--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 	<li>Natalia Baldó García</li>
 	<ul> 
 		<li><a href="https://nataliabaldogarcia.github.io/Be-Calm/">poema</a></li>
+		<li><a href="https://nataliabaldogarcia.github.io/Poesia-1909/">avant-garde</a></li>
+		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Poesia_5-3_6_Apr_1909.jpg">Poesia 1909</a></li>
 	</ul>
 	<li>India Gisbert Martín del Burgo</li>
 	<ul>
