--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 	<ul> 
 		<li><a href="https://cristinanb.github.io/ejercicio_poema/">poema</a></li>
 		<li><a href="https://cristinanb.github.io/avantgarde/"> avantgarde</a></li>
+		<li><a href="https://cristinanb.github.io/seaharvest/.> seaharvest</a></li>
 	
 	</ul>
 	
