--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 	<ul>
 		<li><a href="https://paquivj.github.io/avantgarde/">avantgarde</a></li>
 		<li><a href="https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
+		<li><a href="https://paquivj.github.io/seaharvest/"> seaharvest</a></li>
+
 	</ul>
 	
 	<li>Clara Pérez Martínez</li>
