--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 	<ul>
 		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
 		<li><a href="https://luciaml10.github.io/Avant-Garde-p10/">avantgarde</a></li>
+		<li><a href="https://luciaml10.github.io/SeaHarvest/"> SeaHarvest</a></li>
 	</ul>
 	<li>Rebeca Jordá Pintado</li>
 	<ul>
