--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 	<ul>
 		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
 		<li><a href="https://ainamolines.github.io/avantgarde/">Warsaw</a></li>
+		<li><a href="https://ainamolines.github.io/seaharvest/">Seaharvest</a></li>
 		
 		
 	</ul>
