--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
 	<ul>
 		<li><a href="https://ainamolines.github.io/poema/">poema</a></li>
 		<li><a href="https://ainamolines.github.io/avantgarde/">Warsaw</a></li>
-		<li><a href="https://ainamolines.github.io/seaharvest/">Seaharvest</a></li>
-		<li><a href="https://ainamolines.github.io/seaharvest2/">Seaharvest2</a></li>
+		<li><a href="https://ainamolines.github.io/seaharvest2/">Seaharvest</a></li>
 		
 	</ul>
 	<li>Omar Giménez i García</li>
