--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 	<ul>
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
 		<li><a href="https://claraperezmartinez.github.io/avantgarde/">avantgarde</a></li>
+		<li><a href="https://claraperezmartinez.github.io/Seaharvest/">Seaharvest</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
 	<ul> 
