--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<ul>
 		<li><a href="https://omarufo.github.io/Poema/">Poema</a></li>
 		<li><a href="https://omarufo.github.io/MA-8.1/">MA 8:1, Vienna, 15 octubre 1922</a>
-		<li><a href="https://github.com/omarufo/Prova-Examen.git">Prova Examen</a>
+		<li><a href="https://omarufo.github.io/Prova-Examen/">Prova Examen</a>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
