--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	</ul>
 	<li>India Gisbert Martín del Burgo</li>
 	<ul>
-		<li><a https://monoskop.org/Bauhaus#mediaviewer/File:Bauhaus_3-4_1929.jpg>Block</a></li>
+		<li><a href="https://monoskop.org/Bauhaus#mediaviewer/File:Bauhaus_3-4_1929.jpg">Block</a></li>
 		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
 		<li><a href="https://india7.github.io/rundplastik./">avantgarde</a></li>
 	</ul>
