--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<ul>
 		<li><a href="https://omarufo.github.io/Poema/">Poema</a></li>
 		<li><a href="https://omarufo.github.io/MA-8.1/">MA 8:1, Vienna, 15 octubre 1922</a>
-		<li><a href="https://omarufo.github.io/Prova-Examen/">Prova Examen</a>
+		<li><a href="https://omarufo.github.io/Prova-Examen/">Sea Harvest</a>
 	</ul>
 	<li>Sofía Escolano Gómez</li>
 	<ul>
@@ -145,7 +145,7 @@
 	</ul>
 	<li>India Gisbert Martín del Burgo</li>
 	<ul>
-		<li><a href="https://monoskop.org/Bauhaus#mediaviewer/File:Bauhaus_3-4_1929.jpg">Block</a></li>
+		<li><a https://monoskop.org/Bauhaus#mediaviewer/File:Bauhaus_3-4_1929.jpg>Block</a></li>
 		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
 		<li><a href="https://india7.github.io/rundplastik./">avantgarde</a></li>
 	</ul>
