--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
 	</ul>
 	<li>India Gisbert Martín del Burgo</li>
 	<ul>
-		<li><a https://monoskop.org/Bauhaus#mediaviewer/File:Bauhaus_3-4_1929.jpg>Block</a></li>
+		<li><a href="https://monoskop.org/Bauhaus#mediaviewer/File:Bauhaus_3-4_1929.jpg">vanguardias</a></li>
 		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
 		<li><a href="https://india7.github.io/rundplastik./">avantgarde</a></li>
+		<li><a href="https://india7.github.io/india_seaharvest/">seaharvest</a></li>
 	</ul>
 	<li>Judit Iniesta Lorente</li>
 	<ul>
