--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		<li><a href="https://india7.github.io/aguascristalinas/">poema</a></li>
 		<li><a href="https://india7.github.io/rundplastik./">avantgarde</a></li>
 		<li><a href="https://india7.github.io/india_seaharvest/">seaharvest</a></li>
-		<li><a href="https://india7.github.<li><a href="io/india_js/">js</a></li>
+		<li><a href="https://india7.github.io/india_js/">js</a></li>
 	</ul>
 	<li>Judit Iniesta Lorente</li>
 	<ul>
