--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 	<ul>
 		<li><a href="https://rebecajord.github.io/poema-jueves/">poema</a></li>
 		<li><a href="https://rebecajord.github.io/die-form-num-5/">vanguardias</a></li>
+		<li><a href="https://rebecajord.github.io/rebeca_jorda_js/">JavaScript</a></li>
 	</ul>
 	<li>Sergio Miró Bernabeu</li>
 	<ul>
