--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 		<li><a href="https://rebecajord.github.io/poema-jueves/">poema</a></li>
 		<li><a href="https://rebecajord.github.io/die-form-num-5/">vanguardias</a></li>
 		<li><a href="https://rebecajord.github.io/rebeca_jorda_js/">JavaScript</a></li>
+		<li><a href="https://rebecajord.github.io/seaharvest/">SeaHarvest</a></li>
 	</ul>
 	<li>Sergio Miró Bernabeu</li>
 	<ul>
