--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 		<li><a href="https://paquivj.github.io/avantgarde/">avantgarde</a></li>
 		<li><a href="https://paquivj.github.io/Las-seis-cuerdas/">poema</a></li>
 		<li><a href="https://paquivj.github.io/seaharvest/"> seaharvest</a></li>
+		<li><a href=" https://paquivj.github.io/JavaScript/.">JavaScript</a></li>
 
 	</ul>
 	
