--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 		<li><a href="https://sergiomirobernabeu.github.io/Practica-4-cancion/">poema</a></li>
 		<li><a href="https://sergiomirobernabeu.github.io/Avant_Garde_p10/">Les_Reverberes_2_portada</a></li>
 		<li><a href="https://sergiomirobernabeu.github.io/Sea-Harvest/"> SeaHarvest</a></li>
+		<li><a href="https://sergiomirobernabeu.github.io/javascriptlaplaza/">JavaScript</a></li>
 	</ul>
 	
 	<li>Paqui Valero Jiménez</li>
