--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		<li><a href="https://claraperezmartinez.github.io/Poema/">poema</a></li>
 		<li><a href="https://claraperezmartinez.github.io/avantgarde/">avantgarde</a></li>
 		<li><a href="https://claraperezmartinez.github.io/Seaharvest/">Seaharvest</a></li>
-		<li><a href="https://claraperezmartinez.github.io/Javascript/</a></li>
+		<li><a href="https://claraperezmartinez.github.io/Javascript/">JavaScript</a></li>
 	</ul>
 	<li>Natalia Baldó García</li>
 	<ul> 
