--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
 	<li>Clara García Marfil</li>
 	<ul> 
 		<li><a href="https://claragarciam.github.io/poema/">poema</a></li>
+		<li><a href="https://claragarciam.github.io/Seaharvest/">Seaharvest</a></li>
+		<li><a https://claragarciam.github.io/vanguardias/">Vanguardia391</a><li>
+		<li><a https://claragarciam.github.io/JavaScript/">JavaScript</a></li>
 	</ul>
 	<li>Pablo Morán Delgado</li>
 	
