--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 	<ul> 
 		<li><a href="https://claragarciam.github.io/poema/">poema</a></li>
 		<li><a href="https://claragarciam.github.io/Seaharvest/">Seaharvest</a></li>
-		<li><a https://claragarciam.github.io/vanguardias/">Vanguardia391</a><li>
-		<li><a https://claragarciam.github.io/JavaScript/">JavaScript</a></li>
+		<li><a href="https://claragarciam.github.io/vanguardias/">Vanguardia391</a><li>
+		<li><a href="https://claragarciam.github.io/JavaScript/">JavaScript</a></li>
 	</ul>
 	<li>Pablo Morán Delgado</li>
 	
