--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 		<li><a href="https://nataliabaldogarcia.github.io/Be-Calm/">poema</a></li>
 		<li><a href="https://nataliabaldogarcia.github.io/Poesia-1909/">avant-garde</a></li>
 		<li><a href="https://monoskop.org/Magazines#mediaviewer/File:Poesia_5-3_6_Apr_1909.jpg">Poesia 1909</a></li>
-		<li><a href="https://nataliabaldogarcia.github.io/Sea-Harvest/">Sea Harvest</a></li>
-		<li><a href="https://nataliabaldogarcia.github.io/Javascript/">Javascript</a></li>
+		<li><a href="https://nataliabaldogarcia.github.io/Sea-Harvest/">sea harvest</a></li>
+		<li><a href="https://nataliabaldogarcia.github.io/Javascript/">javascript</a></li>
 	</ul>
 	<li>India Gisbert Martín del Burgo</li>
 	<ul>
