--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		<li><a href="https://india7.github.io/india_seaharvest/">seaharvest</a></li>
 		<li><a href="https://india7.github.io/js/>js</a></li>
 	</ul>
-	<li>Judit Iniesta Lorente </li>
+	<li>Judit Iniesta Lorente</li>
 	<ul>
 		<li><a href="https://rompetechxs.github.io/poema/">poema</a></li>
 		<li><a href="https://rompetechxs.github.io/avantgarde/">dokumentum</a></li>
@@ -168,8 +168,8 @@
 	<li>Clara García Marfil</li>
 	<ul> 
 		<li><a href="https://claragarciam.github.io/poema/">poema</a></li>
-		<li><a href="https://claragarciam.github.io/Seaharvest/">Seaharvest</a></li>
-		<li><a href="https://claragarciam.github.io/vanguardias/">Vanguardia391</a><li>
+		<li><a href="https://claragarciam.github.io/seaharvesst/">Seaharvest</a></li>
+		<li><a href="https://claragarciam.github.io/vanguardi/">Vanguardia391</a><li>
 		<li><a href="https://claragarciam.github.io/JavaScript/">JavaScript</a></li>
 	</ul>
 	<li>Pablo Morán Delgado</li>
