--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		<li><a href="https://luciaml10.github.io/poema/">poema</a></li>
 		<li><a href="https://luciaml10.github.io/Avant-Garde-p10/">avantgarde</a></li>
 		<li><a href="https://luciaml10.github.io/SeaHarvest/"> SeaHarvest</a></li>
-		
+		<li><a href="https://luciaml10.github.io/Java_Script/">JavaScript</a></li>
 	</ul>
 	<li>Rebeca Jordá Pintado</li>
 	<ul>
