--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
 	<li>Carla Abad Pérez</li>
 	<ul>
 		<li><a href="https://carlabad.github.io/Ejercicio-poema-cancion/">poema</a></li>
-		<li><a href=">Die Form portada</a></li>
+		<li><a href="https://carlabad.github.io/dieform/"> avantgarde</a></li>
 		<li><a href="https://carlabad.github.io/sea-h/"> seaharvest</a></li>
+		
 		 
  
 	</ul>
