--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
 		<li><a href="https://carlabad.github.io/Ejercicio-poema-cancion/">poema</a></li>
 		<li><a href="https://carlabad.github.io/dieform/"> avantgarde</a></li>
 		<li><a href="https://carlabad.github.io/sea-h/"> seaharvest</a></li>
-		
-		 
- 
 	</ul>
+			<li>Quico Climent Such</li>
+			<li></li>
+			<li></li>
 </ul>
 </div>
 </body>
