--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
 			<li>Quico Climent Such</li>
 			<li></li>
 			<li></li>
+	
+	<li>Claudia Jerez García</li>
+	   <ul>
+		<li><a href="https://claudietajerez.github.io/poema/">poema</a></li>
+	   </ul>
+			
+			
 </ul>
 </div>
 </body>
