--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 	
 	<li>Claudia Jerez García</li>
 	   <ul>
-		<li><a href="https://claudietajerez.github.io/poema/">poema</a></li>
+		<li><a href="https://claudietajerez.github.io/poemaa/">poema</a></li>
 	   </ul>
 			
 			
