--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 	<li>Claudia Jerez García</li>
 	   <ul>
 		<li><a href="https://claudietajerez.github.io/poemaa/">poema</a></li>
+		<li><a href="https://claudietajerez.github.io/vanguardias/">vanguardias</a></li>
 	   </ul>
 			
 			
