--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 	   <ul>
 		<li><a href="https://claudietajerez.github.io/poemaa/">poema</a></li>
 		<li><a href="https://claudietajerez.github.io/vanguardias/">vanguardias</a></li>
+		<li><a href="https://claudietajerez.github.io/seaharvest/">seaharvest</a></li>
 	   </ul>
 			
 			
