--- a/index.html
+++ b/index.html
@@ -189,9 +189,13 @@
 		<li><a href="https://carlabad.github.io/dieform/"> avantgarde</a></li>
 		<li><a href="https://carlabad.github.io/sea-h/"> seaharvest</a></li>
 	</ul>
-			<li>Quico Climent Such</li>
-			<li></li>
-			<li></li>
+			
+	<li>Quico Climent Such</li>
+	</ul>		
+			<li><a href="https://climentquico.github.io/Poem/">Poem</a><li>
+			<li><a href="https://climentquico.github.io/Avantgarde/">Avantagarde</a><li>
+			<li><a href="https://climentquico.github.io/PROGRAMALAPLAZA/">PROGRMALAPLAZA</a><li>
+	</ul>			
 	
 	<li>Claudia Jerez García</li>
 	   <ul>
