--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
 			
 	<li>Quico Climent Such</li>
 	</ul>		
-			<li><a href="https://climentquico.github.io/Poem/">Poem</a><li>
-			<li><a href="https://climentquico.github.io/Avantgarde/">Avantagarde</a><li>
-			<li><a href="https://climentquico.github.io/PROGRAMALAPLAZA/">PROGRMALAPLAZA</a><li>
+			<li><a href="https://climentquico.github.io/Poem/">Poem</a></li>
+			<li><a href="https://climentquico.github.io/Avantgarde/">Avantagarde</a></li>
+			<li><a href="https://climentquico.github.io/PROGRAMALAPLAZA/">PROGRMALAPLAZA</a></li>
 	</ul>			
 	
 	<li>Claudia Jerez García</li>
